apps/base/nyrvex-de/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-nyrvex-de
  labels:
    # Wird von der NetworkPolicy als namespaceSelector gebraucht. Kubernetes
    # setzt dieses Label zwar automatisch, aber explizit ist es dokumentiert.
    kubernetes.io/metadata.name: web-nyrvex-de
