apps/base/nyrvex-de/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nyrvex-de
  namespace: web-nyrvex-de
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nyrvex-de
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
